--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   auto-gpt:
-    image: significantgravitas/auto-gpt
+    image: significantgravitas/auto-gpt:v0.3.0
     depends_on:
       - redis
     env_file:
